// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component isDisabled 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-disabled={true}
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ebsp7h 65ai6z-r3q1zx"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c hv60nn-1hkypfz hv60nn-11wy4tg bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik 16ccdma-11wy4tg pskfds-1q64x7k"
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M20 6L9 17L4 12"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322 a38rug-11wy4tg"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ebsp7h 65ai6z-r3q1zx"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c hv60nn-11wy4tg bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-11wy4tg"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isInvalid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ebsp7h"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c hv60nn-1hkypfz hv60nn-zjvgbf bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik pskfds-1q64x7k"
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M20 6L9 17L4 12"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ebsp7h"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c hv60nn-zjvgbf bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isReadOnly 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ebsp7h"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  aria-readonly={true}
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c hv60nn-1hkypfz bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik pskfds-1q64x7k"
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M20 6L9 17L4 12"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ebsp7h"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  aria-readonly={true}
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-ksaz4x"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c hv60nn-1hkypfz 65ai6z-1tbck4z bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik pskfds-1q64x7k"
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M20 6L9 17L4 12"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322 65ai6z-16we7vb"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-ksaz4x"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c 65ai6z-1tbck4z bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm 65ai6z-16we7vb"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ebsp7h"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c hv60nn-1hkypfz 65ai6z-10d27qj bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik pskfds-1q64x7k"
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M20 6L9 17L4 12"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322 65ai6z-11hczkh"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ebsp7h"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c 65ai6z-10d27qj bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm 65ai6z-11hczkh"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ksor04"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c hv60nn-1hkypfz 65ai6z-1rh3r0r bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik pskfds-1q64x7k"
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M20 6L9 17L4 12"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322 65ai6z-1q2dyj6"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="65ai6z-1mdhnmt 65ai6z-1ksor04"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="hv60nn-1jvh2c 65ai6z-1rh3r0r bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm 65ai6z-1q2dyj6"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
